--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/shop"
+        android:icon="@drawable/shop_item"
+        android:title="@string/shop"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/explore"
+        android:icon="@drawable/explore_item"
+        android:title="@string/explore"/>
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/cart"
+        android:icon="@drawable/cart_item"
+        android:title="@string/cart"/>
+
+    <item
+        android:id="@+id/favorite"
+        android:icon="@drawable/favorite_item"
+        android:title="@string/favorite"/>
+
+    <item
+        android:id="@+id/account"
+        android:icon="@drawable/account_item"
+        android:title="@string/account"/>
 
 </menu>
