--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -7,11 +7,11 @@
     tools:context=".Activity.ForgotPassActivity">
 
   <ImageView
-      android:id="@+id/ivBack"
+      android:id="@+id/ivBackpas"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="25dp"
-      android:layout_marginTop="25dp"
+      android:layout_marginTop="20dp"
       android:src="@drawable/ic_back"
 
       app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
       android:layout_width="128dp"
       android:layout_height="89dp"
       android:layout_marginStart="20dp"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="5dp"
 
       android:src="@drawable/imghelloscreen"
       app:layout_constraintEnd_toEndOf="parent"
