--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,38 +11,40 @@
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_back"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_back"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvDangNhapTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ng_k"
-        android:textSize="32sp"
-        android:layout_marginTop="37dp"
         android:layout_marginStart="40dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:text="@string/ng_k"
 
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline10"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivBack"/>
+        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nh_p_th_ng_tin_ng_nh_p_c_a_b_n"
-        android:textSize="18sp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:text="@string/nh_p_th_ng_tin_ng_nh_p_c_a_b_n"
         android:textColor="@color/black"
+        android:textSize="18sp"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDangNhapTitle"/>
+        app:layout_constraintTop_toBottomOf="@id/tvDangNhapTitle" />
 
 
     <EditText
@@ -51,82 +53,125 @@
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="50dp"
-        android:hint="@string/h_v_t_n"
+        android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_mess"
         android:drawablePadding="12dp"
+        android:hint="@string/h_v_t_n"
         android:paddingStart="16dp"
-        android:background="@drawable/bg_edit_text"
 
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <EditText
         android:id="@+id/edtEmailDangNhap"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        android:hint="@string/email"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_mess"
         android:drawablePadding="12dp"
+        android:hint="@string/email"
         android:paddingStart="16dp"
-        android:background="@drawable/bg_edit_text"
 
-        app:layout_constraintTop_toBottomOf="@id/edtHoTen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtHoTen" />
 
     <EditText
         android:id="@+id/edtPassWordDangKy"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        android:hint="@string/nh_p_m_t_kh_u"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
+        android:hint="@string/nh_p_m_t_kh_u"
         android:paddingStart="16dp"
-        android:background="@drawable/bg_edit_text"
 
-        app:layout_constraintTop_toBottomOf="@id/edtEmailDangNhap"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtEmailDangNhap" />
 
     <EditText
         android:id="@+id/edtRePassWordDangKy"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        android:hint="@string/nh_p_l_i_m_t_kh_u"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
-        android:paddingStart="16dp"
-        android:background="@drawable/bg_edit_text"
+        android:hint="@string/nh_p_l_i_m_t_kh_u"
 
-        app:layout_constraintTop_toBottomOf="@id/edtPassWordDangKy"
+        android:paddingStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
     <TextView
         android:id="@+id/tvDangKy"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="30dp"
-        android:text="@string/ng_k"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/bg_btn"
         android:gravity="center"
+        android:text="@string/ng_k"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
-        android:background="@drawable/bg_btn"
-
-        app:layout_constraintTop_toBottomOf="@id/edtRePassWordDangKy"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtRePassWordDangKy" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="15dp"
+        android:text="@string/da_co_tai_khoan_chua"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.411"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/ng_k"
+        android:textColor="#B43838"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
