--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -14,10 +14,10 @@
         android:src="@drawable/imghelloscreen"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.117" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvLoginGoogle"
@@ -52,7 +52,7 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Đăng nhập với Google"
+                android:text="@string/login_go"
                 android:textSize="14sp"
                 android:textColor="#666666"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -98,7 +98,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Đăng nhập với Facebook"
+                android:text="@string/login_fa"
                 android:textSize="14sp"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +132,7 @@
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="@string/ng_nh_p"
@@ -176,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
+        app:layout_constraintGuide_percent="0.45" />
 
     <ImageView
         android:id="@+id/imageView5"
