--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,16 +7,155 @@
     tools:context=".ui.cart.CartFragment">
 
     <TextView
-        android:id="@+id/text_notifications"
+        android:id="@+id/tvGioiHang"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp"
+        android:background="#F9514F"
+        android:text="Giỏi Hàng"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="#181725"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGioiHang">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="148dp"
+            android:layout_height="110dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="3dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_sp" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginLeft="360dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/cart_item_delete" />
+
+        <TextView
+            android:layout_width="194dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="174dp"
+            android:layout_marginTop="20dp"
+            android:text="Cơm gà nướng mật ong"
+            android:textColor="#181725"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="186dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/cart_item_tru" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginLeft="230dp"
+            android:layout_marginTop="65dp"
+            android:text="10"
+            android:textColor="#181725"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/cart_item_cong" />
+
+        <TextView
+            android:layout_width="72dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="310dp"
+            android:layout_marginTop="88dp"
+            android:text="45.000đ"
+            android:textColor="#181725"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:background="#DAA6A6"
+            android:gravity="center"
+            android:text="Món: 1"
+            android:textColor="#F5F5F5"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="135dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="100dp"
+            android:background="#E98787"
+            android:gravity="center"
+            android:text="45.000đ"
+            android:textColor="#F5F5F5"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="176dp"
+            android:layout_height="60dp"
+            android:background="#FF0000"
+            android:gravity="center"
+            android:text="Thanh Toán"
+            android:textColor="#F5F5F5"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/textView13"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
