--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -7,16 +7,108 @@
     tools:context=".ui.explore.ExploreFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/tvTimKiem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp"
+        android:background="#F9514F"
+        android:text="Tìm Kiếm"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="#181725"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtExplore"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/bg_edit_text"
+        android:drawableStart="@drawable/explore_item_search"
+        android:drawablePadding="12dp"
+        android:hint="@string/explore"
+        android:paddingStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="6dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtExplore">
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="148dp"
+            android:layout_height="110dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="3dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_sp"/>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_marginLeft="174dp"
+            android:layout_marginTop="10dp"
+            android:text="Cơm gà nướng mật ong"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#181725"
+            android:layout_width="194dp"
+            android:layout_height="52dp"/>
+
+        <TextView
+            android:layout_width="39dp"
+            android:layout_height="20dp"
+            android:text="2gam"
+            android:textSize="14sp"
+            android:textColor="#7C7C7C"
+            android:layout_marginLeft="174dp"
+            android:layout_marginTop="67dp"/>
+
+        <TextView
+            android:layout_width="72dp"
+            android:layout_height="20dp"
+            android:text="45.000đ"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#181725"
+            android:layout_marginLeft="174dp"
+            android:layout_marginTop="92dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="342dp"
+            android:layout_marginTop="86dp">
+
+            <TextView
+                android:layout_width="24dp"
+                android:layout_height="26dp"
+                android:background="@drawable/explore_item_them"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
