tran the ngoc update code fb gg

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -191,8 +191,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:id="@+id/ctlGoogle"
+            >
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
@@ -243,8 +244,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:id="@+id/ctlFacebook">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
